--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
@@ -11,10 +11,13 @@ Salut à tous !
 
 Recherche alternant/stagiaire?
 
-Résumé RNC
+Résumé RNC: https://twitter.com/sebastienlorber/status/1664584407775051779
+
+10 ans de React
 
 OSAward:
 
+- https://twitter.com/sebastienlorber/status/1664667086860308481
 - https://twitter.com/Piotrski/status/1664642858542931968
 - https://twitter.com/Med7atDawoud/status/1664646001234268168
 - https://twitter.com/coding_garden/status/1664659632319606784
@@ -52,7 +55,43 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
-<Todo />
+- 👀 [New upcoming React `<Catch>` API?](https://twitter.com/wongmjane/status/1661786321176911872)
+- 👀 [Remix + RSC POC](https://twitter.com/ryanflorence/status/1663587026384584704): Remix prévoit finalement d'implémenter les Server Components, et donne l'une des raisons [ici](https://twitter.com/remix_run/status/1661017634480201734).
+- 💬 [ReactWG - RSC from Scratch. Part 1: Server Components](https://twitter.com/dan_abramov/status/1664681506218864640): Dan Abramov propose un deep dive complet sur l'implémentation des React Server Components en partant d'une page blanche. La 1ère partie (sur 3) est disponible et propose d'implémenter les Server Components.
+- 💬 [ReactWG - Why do Client Components get SSR'd to HTML?](https://github.com/reactwg/server-components/discussions/4) + https://twitter.com/dan_abramov/status/1664456909116538880
+- 📖 [Next.js Docs Update - Project Organization page](https://twitter.com/delba_oliveira/status/1662211824211877889)
+- 📦 [TypeScript 5.1](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1) + https://twitter.com/sebsilbermann/status/1664356039876124672
+- 📜 [Spotify - Multiple Layers of Abstraction in Design Systems](https://engineering.atspotify.com/2023/05/multiple-layers-of-abstraction-in-design-systems/)
+- 📜 [How the Raycast API and extensions work](https://www.raycast.com/blog/how-raycast-api-extensions-work) + https://twitter.com/raycastapp/status/1663926999214329862
+- 📜 [Solving hydration errors in Remix](https://www.jacobparis.com/content/remix-hydration-errors)
+- 📜 [What is JSX.IntrinsicElements?](https://www.totaltypescript.com/what-is-jsx-intrinsicelements)
+- 📜 [Explained: 'React' refers to a UMD global](https://www.totaltypescript.com/react-refers-to-a-umd-global)
+- 📜 [Why We Are Dropping Support For Next Js](https://www.stormkit.io/blog/why-we-are-dropping-support-for-next-js)
+- 📜 [An Ode to React Effects](https://alexkondov.com/an-ode-to-effects/)
+- 📜 [Opinionated notes on React Server components](https://github.com/nilshartmann/react-server-component-material/blob/notes-on-rsc/notes-on-rsc.md)
+- 📜 [Deploying Next.js on the edge with SST — Is SST the game-changer it’s claimed to be?](https://engineering.udacity.com/deploying-next-js-on-the-edge-with-sst-is-sst-the-game-changer-its-claimed-to-be-1f05a0abc27c)
+- 📜 [A better learning path for React with server components](https://scastiel.dev/better-learning-path-react) ??
+- 📜 [The React Ecosystem in 2023](https://www.builder.io/blog/react-js-in-2023)
+- 📜 [Celebrating 10 Years of React](https://vercel.com/blog/10-years-of-react)
+- 📜 [Isomorphic Development](https://meijer.ws/articles/isomorphic-development)
+- 📜 [RedwoodJS’ Next Epoch: All In on React Server Components](https://tom.preston-werner.com/2023/05/30/redwoods-next-epoch-all-in-on-rsc.html)
+- 📜 [Progressively enhanced client rendering to avoid SSR hydration issues in Remix](https://www.jacobparis.com/content/remix-progressive-client-only)
+- 📜 [The evolution of React APIs and code reuse](https://frontendmastery.com/posts/the-evolution-of-react-patterns/)
+- 📜 [Is React Having An Angular.js Moment?](https://marmelab.com/blog/2023/06/05/react-angularjs-moment.html)
+- 🔗 [React Handbook](https://reacthandbook.dev/)
+- 📦 [Triplex - React Three Fiber visual editor](https://twitter.com/itsdouges/status/1664874971481382913)
+- 📦 [useHooks.com v2.0 - SSR-safe hooks collection](https://usehooks.com/)
+- 📦 [ReMDX - Beautiful Minimalist React & MDX Presentations](https://github.com/cpojer/remdx)
+- 📦 [Next-Typesafe-Url - Fully typesafe and zod validated routing for Next.JS](https://github.com/ethanniser/next-typesafe-url)
+- 📦 [Redux Toolkit v2.0.0-beta.0](https://twitter.com/acemarke/status/1663707088478953474)
+- 📦 [Pastel v2.0 - A Next.js-like framework for CLIs made with Ink](https://twitter.com/vadimdemedes/status/1661343197535129601)
+- 📦 [React Aria + React Spectrum - May 24 2023 releases](https://twitter.com/devongovett/status/1661765315825643521)
+- 📦 [Astro - Starlight docs template](https://twitter.com/astrodotbuild/status/1665720351261614082)
+- 🎥 [React Roundtable: Server Components, Suspense, and Actions](https://www.youtube.com/watch?v=g5BGoLyGjY0)
+- 🎥 [How to NOT Poison Your React Server Components](https://www.youtube.com/watch?v=BZlwtR9pDp4): utilisation du package `server-only` pour éviter d'importer du code server dans vos Client Components.
+- 🎥 [Remix Conf - React Core Panel Q&A](https://www.youtube.com/watch?v=WiEtFPYGgbM)
+- 🎥 [Are React Server Components Really Slower?](https://www.youtube.com/watch?v=3Q2q2gs0nAI)
+- 🎥 [Did RSCs Really Turn React Into PHP?](https://www.youtube.com/watch?v=hr_y1hIdZHs)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -74,7 +113,18 @@ Want to start building with ChatGPT + Email API calls in React? [Here’s a guid
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 👀 [Portal - Apple Vision Pro app using React-Native](https://twitter.com/Baconbrix/status/1665816002712436736)
+- 👀 [Nearly ¼ of the top Shopping Apps on the Apple App Store use React Native](https://twitter.com/Baconbrix/status/1664285684583002112): les apps React-Native ont la meilleur note! Voir aussi [Foot & Drinks](https://twitter.com/Baconbrix/status/1661775514074247169) + [Finance](https://twitter.com/Baconbrix/status/1662866951784235008)
+- 👀 [Help us Kotlin-ify React Native tests](https://twitter.com/cortinico/status/1666001895360454660): le début d'une migration de React-Native de Java vers Kotlin!
+- 👀 [React-Skia-Experiment](https://github.com/wcandillon/react-skia-experiment): William Candillon expérimente pour rendre la librairie React-Native-Skia universelle ([tweet](https://twitter.com/wcandillon/status/1662037035102683136)).
+- 📜 [How BlueSky Structure Their App and Manage State](https://alexkondov.com/reading-code-bluesky/)
+- 🔗 [React Native Performance Issues Catalogue](https://spangled-split-858.notion.site/React-Native-Performance-Issues-Catalogue-9338979a2a5648e883331ef2050e963c): une DB Notion qui liste les causes et symptômes des problèmes de perf React-Native pour vous aider à les fixer.
+- 📦 [React-Native 0.72.0-RC.5](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.5): nouvelle Golden Release Candidate.
+- 📦 [style-variants - solution for creating dynamic and reusable styles](https://github.com/oktaysenkan/style-variants)
+- 🎥 [App.js 2023 - Youtube Playlist](https://www.youtube.com/playlist?list=PLSk21zn8fFZCfYEMpSqQOHMgyNKc8B7_s)
+- 🎥 [Chain React 2023 - Youtube Playlist](https://www.youtube.com/playlist?list=PLFHvL21g9bk30F2UaJfn6TqJn15MAoBOc)
+- 🎙️ React-Native-Radio: [266 - Chain React Roundup](https://reactnativeradio.com/episodes/rnr-266-chain-react-roundup) + [267 - React Native Windows With Chiara Mooney](https://reactnativeradio.com/episodes/rnr-267-react-native-windows-with-chiara-mooney)
+- 🎙️ [React Native Show Coffee Talk #10 - Vercel news, React Canaries & RN macOS 0.71](https://www.youtube.com/watch?v=qvPOkvdG0ZI)
 
 ---
 
@@ -96,7 +146,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Bref. Je suis allé à Chain React.](https://www.youtube.com/watch?v=QVqYGXxLuH4)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -106,13 +156,31 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Running Promises in Parallel: A Visual Guide](https://julesblom.com/writing/running-promises-in-parallel)
+- [Parcel 2.9](https://parceljs.org/blog/v2-9-0/)
+- [XState v5 beta](https://stately.ai/blog/announcing-xstate-v5-beta)
+- [Deno 1.34: deno compile supports npm packages](https://deno.com/blog/v1.34)
+- [Rspack 0.2](https://twitter.com/rspack_dev/status/1664510907379228672)
+- [JavaScript Macros in Bun](https://bun.sh/blog/bun-macros)
+- [New to the web platform in May](https://web.dev/web-platform-05-2023/)
+- [WebKit Features in Safari 17 beta](https://webkit.org/blog/14205/news-from-wwdc23-webkit-features-in-safari-17-beta/)
+- [Introducing the popover API](https://developer.chrome.com/blog/introducing-popover-api/)
+- [Web Share API is now a W3C Recommendation](https://www.w3.org/blog/news/archives/9931)
+- [An introduction to @scope in CSS](https://fullystacked.net/posts/scope-in-css/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/elibelly/status/1664609058400223237
+
+https://twitter.com/TkDodo/status/1666012987545513984
+
+https://twitter.com/sophiebits/status/1663710200078151681
+
+https://twitter.com/peterpme/status/1665768675398373377
+
+https://twitter.com/AdamRackis/status/1664771656315805703
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
