--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
@@ -86,7 +86,7 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 - 📦 [Redux Toolkit v2.0.0-beta.0](https://twitter.com/acemarke/status/1663707088478953474)
 - 📦 [Pastel v2.0 - A Next.js-like framework for CLIs made with Ink](https://twitter.com/vadimdemedes/status/1661343197535129601)
 - 📦 [React Aria + React Spectrum - May 24 2023 releases](https://twitter.com/devongovett/status/1661765315825643521)
-- 📦 [Astro - Starlight docs template](https://twitter.com/astrodotbuild/status/1665720351261614082)
+- 📦 [Astro v2.6 - Middleware, hybrid SSR, custom client directives...](https://astro.build/blog/astro-260/)
 - 🎥 [React Roundtable: Server Components, Suspense, and Actions](https://www.youtube.com/watch?v=g5BGoLyGjY0)
 - 🎥 [How to NOT Poison Your React Server Components](https://www.youtube.com/watch?v=BZlwtR9pDp4): utilisation du package `server-only` pour éviter d'importer du code server dans vos Client Components.
 - 🎥 [Remix Conf - React Core Panel Q&A](https://www.youtube.com/watch?v=WiEtFPYGgbM)
@@ -113,10 +113,10 @@ Want to start building with ChatGPT + Email API calls in React? [Here’s a guid
 
 ## 📱 React-Native {#react-native}
 
-- 👀 [Portal - Apple Vision Pro app using React-Native](https://twitter.com/Baconbrix/status/1665816002712436736)
 - 👀 [Nearly ¼ of the top Shopping Apps on the Apple App Store use React Native](https://twitter.com/Baconbrix/status/1664285684583002112): les apps React-Native ont la meilleur note! Voir aussi [Foot & Drinks](https://twitter.com/Baconbrix/status/1661775514074247169) + [Finance](https://twitter.com/Baconbrix/status/1662866951784235008)
 - 👀 [Help us Kotlin-ify React Native tests](https://twitter.com/cortinico/status/1666001895360454660): le début d'une migration de React-Native de Java vers Kotlin!
 - 👀 [React-Skia-Experiment](https://github.com/wcandillon/react-skia-experiment): William Candillon expérimente pour rendre la librairie React-Native-Skia universelle ([tweet](https://twitter.com/wcandillon/status/1662037035102683136)).
+- 👀 [Portal - Apple Vision Pro app using React-Native](https://twitter.com/Baconbrix/status/1665816002712436736)
 - 📜 [How BlueSky Structure Their App and Manage State](https://alexkondov.com/reading-code-bluesky/)
 - 🔗 [React Native Performance Issues Catalogue](https://spangled-split-858.notion.site/React-Native-Performance-Issues-Catalogue-9338979a2a5648e883331ef2050e963c): une DB Notion qui liste les causes et symptômes des problèmes de perf React-Native pour vous aider à les fixer.
 - 📦 [React-Native 0.72.0-RC.5](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.5): nouvelle Golden Release Candidate.
@@ -172,18 +172,6 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/elibelly/status/1664609058400223237
-
-https://twitter.com/TkDodo/status/1666012987545513984
-
-https://twitter.com/sophiebits/status/1663710200078151681
-
-https://twitter.com/peterpme/status/1665768675398373377
-
-https://twitter.com/AdamRackis/status/1664771656315805703
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/147/meme.jpg)](https://twitter.com/sophiebits/status/1663710200078151681)
 
 A plus 👋
