--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
@@ -146,7 +146,8 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Bref. Je suis allé à Chain React.](https://www.youtube.com/watch?v=QVqYGXxLuH4)
+- 🎥 [Bref. Je suis allé à Chain React.](https://www.youtube.com/watch?v=QVqYGXxLuH4)
+- 🎥 [Une AI qui Créer et Affiche des Composants React](https://www.youtube.com/watch?v=VnZXuP_yYHw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
