--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
@@ -55,30 +55,29 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
-- 👀 [New upcoming React `<Catch>` API?](https://twitter.com/wongmjane/status/1661786321176911872)
+- 👀 [React `<Catch>` API?](https://twitter.com/wongmjane/status/1661786321176911872): bientôt un support des Error Boundaries sans class component?
 - 👀 [Remix + RSC POC](https://twitter.com/ryanflorence/status/1663587026384584704): Remix prévoit finalement d'implémenter les Server Components, et donne l'une des raisons [ici](https://twitter.com/remix_run/status/1661017634480201734).
-- 💬 [ReactWG - RSC from Scratch. Part 1: Server Components](https://twitter.com/dan_abramov/status/1664681506218864640): Dan Abramov propose un deep dive complet sur l'implémentation des React Server Components en partant d'une page blanche. La 1ère partie (sur 3) est disponible et propose d'implémenter les Server Components.
-- 💬 [ReactWG - Why do Client Components get SSR'd to HTML?](https://github.com/reactwg/server-components/discussions/4) + https://twitter.com/dan_abramov/status/1664456909116538880
+- 💬 [React WG - RSC from Scratch. Part 1: Server Components](https://twitter.com/dan_abramov/status/1664681506218864640): Dan Abramov propose un deep dive complet sur l'implémentation des React Server Components en partant d'une page blanche. La 1ère partie (sur 3) est disponible et propose d'implémenter les Server Components.
+- 💬 [React WG - Why do Client Components get SSR'd to HTML?](https://github.com/reactwg/server-components/discussions/4) + https://twitter.com/dan_abramov/status/1664456909116538880
 - 📖 [Next.js Docs Update - Project Organization page](https://twitter.com/delba_oliveira/status/1662211824211877889)
-- 📦 [TypeScript 5.1](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1) + https://twitter.com/sebsilbermann/status/1664356039876124672
 - 📜 [Spotify - Multiple Layers of Abstraction in Design Systems](https://engineering.atspotify.com/2023/05/multiple-layers-of-abstraction-in-design-systems/)
 - 📜 [How the Raycast API and extensions work](https://www.raycast.com/blog/how-raycast-api-extensions-work) + https://twitter.com/raycastapp/status/1663926999214329862
-- 📜 [Solving hydration errors in Remix](https://www.jacobparis.com/content/remix-hydration-errors)
+- 📜 [Solving hydration errors in Remix](https://www.jacobparis.com/content/remix-hydration-errors): de bons conseils pour debugger les erreurs d'hydratation React. Cela peut aussi s'appliquer aux autres frameworks
 - 📜 [What is JSX.IntrinsicElements?](https://www.totaltypescript.com/what-is-jsx-intrinsicelements)
 - 📜 [Explained: 'React' refers to a UMD global](https://www.totaltypescript.com/react-refers-to-a-umd-global)
 - 📜 [Why We Are Dropping Support For Next Js](https://www.stormkit.io/blog/why-we-are-dropping-support-for-next-js)
 - 📜 [An Ode to React Effects](https://alexkondov.com/an-ode-to-effects/)
 - 📜 [Opinionated notes on React Server components](https://github.com/nilshartmann/react-server-component-material/blob/notes-on-rsc/notes-on-rsc.md)
-- 📜 [Deploying Next.js on the edge with SST — Is SST the game-changer it’s claimed to be?](https://engineering.udacity.com/deploying-next-js-on-the-edge-with-sst-is-sst-the-game-changer-its-claimed-to-be-1f05a0abc27c)
-- 📜 [A better learning path for React with server components](https://scastiel.dev/better-learning-path-react) ??
+- 📜 [Deploying Next.js on the edge with SST](https://engineering.udacity.com/deploying-next-js-on-the-edge-with-sst-is-sst-the-game-changer-its-claimed-to-be-1f05a0abc27c): feedback plutôt positif sur l'usage d'OpenNext et SST pour déployer une app Next.js sur AWS.
+- 📜 [A better learning path for React with server components](https://scastiel.dev/better-learning-path-react): et si les RSCs rendaient en fait React plus facile à apprendre?
 - 📜 [The React Ecosystem in 2023](https://www.builder.io/blog/react-js-in-2023)
 - 📜 [Celebrating 10 Years of React](https://vercel.com/blog/10-years-of-react)
 - 📜 [Isomorphic Development](https://meijer.ws/articles/isomorphic-development)
 - 📜 [RedwoodJS’ Next Epoch: All In on React Server Components](https://tom.preston-werner.com/2023/05/30/redwoods-next-epoch-all-in-on-rsc.html)
-- 📜 [Progressively enhanced client rendering to avoid SSR hydration issues in Remix](https://www.jacobparis.com/content/remix-progressive-client-only)
 - 📜 [The evolution of React APIs and code reuse](https://frontendmastery.com/posts/the-evolution-of-react-patterns/)
 - 📜 [Is React Having An Angular.js Moment?](https://marmelab.com/blog/2023/06/05/react-angularjs-moment.html)
 - 🔗 [React Handbook](https://reacthandbook.dev/)
+- 📦 [TypeScript 5.1](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1): déjà présentée, cette version TypeScript est important pour React puisqu'elle permet de mieux typer le JSX pour React, et d'autoriser un composant à retourner une Promise (async Server Component), un string, array, boolean... Les typedefs React ont déjà été [mis à jour](https://twitter.com/sebsilbermann/status/1664356039876124672)!
 - 📦 [Triplex - React Three Fiber visual editor](https://twitter.com/itsdouges/status/1664874971481382913)
 - 📦 [useHooks.com v2.0 - SSR-safe hooks collection](https://usehooks.com/)
 - 📦 [ReMDX - Beautiful Minimalist React & MDX Presentations](https://github.com/cpojer/remdx)
@@ -123,7 +122,7 @@ Want to start building with ChatGPT + Email API calls in React? [Here’s a guid
 - 📦 [style-variants - solution for creating dynamic and reusable styles](https://github.com/oktaysenkan/style-variants)
 - 🎥 [App.js 2023 - Youtube Playlist](https://www.youtube.com/playlist?list=PLSk21zn8fFZCfYEMpSqQOHMgyNKc8B7_s)
 - 🎥 [Chain React 2023 - Youtube Playlist](https://www.youtube.com/playlist?list=PLFHvL21g9bk30F2UaJfn6TqJn15MAoBOc)
-- 🎙️ React-Native-Radio: [266 - Chain React Roundup](https://reactnativeradio.com/episodes/rnr-266-chain-react-roundup) + [267 - React Native Windows With Chiara Mooney](https://reactnativeradio.com/episodes/rnr-267-react-native-windows-with-chiara-mooney)
+- 🎙️[React-Native-Radio 266 - Chain React Roundup](https://reactnativeradio.com/episodes/rnr-266-chain-react-roundup) + [React-Native-Radio 267 - React Native Windows With Chiara Mooney](https://reactnativeradio.com/episodes/rnr-267-react-native-windows-with-chiara-mooney)
 - 🎙️ [React Native Show Coffee Talk #10 - Vercel news, React Canaries & RN macOS 0.71](https://www.youtube.com/watch?v=qvPOkvdG0ZI)
 
 ---
